[package]
name = "chaos-tproxy-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.4", features = ["runtime", "client", "server", "http1", "http2", "stream"]}
http = "0.2.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tokio = {version = "1.4", features = ["full"]}
futures = "0.3"
tower-service = "0.3"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
anyhow = "1.0"
socket2 = "0.4.4"
# futures = { version = "0.3", default-features = false }



